Added particles js
Flying btc icons.

--- a/website/app/css/all.css
+++ b/website/app/css/all.css
@@ -44,7 +44,19 @@
   width: 100%;
   min-height: 700px;
   background: url("../img/11.jpg") no-repeat center/cover; }
+  .content #particles-js {
+    position: absolute;
+    height: 700px;
+    width: 100%; }
+    .content #particles-js canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0; }
   .content .main-header {
+    position: relative;
+    z-index: 999;
     width: 100%;
     max-width: 970px;
     height: auto;
@@ -110,7 +122,9 @@
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    position: relative;
+    z-index: 999; }
     .content .currency-stripe .currency {
       margin: 0 auto;
       display: -webkit-box;
@@ -133,6 +147,8 @@
         .content .currency-stripe .currency div span:last-child {
           font-weight: 400; }
   .content .fill-application {
+    position: relative;
+    z-index: 999;
     padding-top: 1px;
     width: 100%;
     max-width: 970px;
@@ -624,8 +640,15 @@
   font-weight: normal; }
 
 .reserve {
+  position: relative;
   background-color: #f1f1f1; }
+  .reserve #particles-js2 {
+    position: absolute;
+    width: 100%;
+    height: 100%; }
   .reserve .wrap {
+    position: relative;
+    z-index: 999;
     width: 100%;
     max-width: 970px;
     height: auto;
