--- a/website/jade/index.jade
+++ b/website/jade/index.jade
@@ -23,8 +23,10 @@ html
         include sections/reserve.jade
         
         include sections/footer.jade
-        
-    script(src="scripts/jquery-3.1.0.min.js")    
+    
+    script(src="scripts/particles/particles.min.js")   
+    script(src="scripts/particles/app.js")        
+    script(src="scripts/jquery-3.1.0.min.js")
     script(src="scripts/functions.js")
 
       
