--- a/website/app/css/content.css
+++ b/website/app/css/content.css
@@ -35,14 +35,25 @@
       bottom: 0; }
   .content .main-header {
     position: relative;
-    z-index: 999;
-    width: 100%;
-    max-width: 970px;
-    height: auto;
-    margin: 0px auto;
-    padding-left: 15px;
-    padding-right: 15px; }
+    z-index: 999; }
+    .content .main-header.dark {
+      background-color: #343434;
+      position: fixed;
+      z-index: 1000;
+      width: 100%; }
+      .content .main-header.dark .pop-up-container {
+        display: block;
+        animation-name: shadow;
+        animation-duration: 300ms;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards; }
     .content .main-header .main-nav {
+      width: 100%;
+      max-width: 970px;
+      height: auto;
+      margin: 0px auto;
+      padding-left: 15px;
+      padding-right: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -76,17 +87,25 @@
           font-family: "MyriadProSemiBold", sans-serif;
           color: #1c95e9;
           font-weight: 600; }
+    .content .main-header .pop-up-container {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      display: none; }
   .content .currency-stripe {
-    min-height: 56px;
     background: white;
     display: flex;
     align-items: center;
     position: relative;
     z-index: 999; }
+    .content .currency-stripe.move-down {
+      padding-top: 115px; }
     .content .currency-stripe .currency {
+      min-height: 56px;
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       width: 100%;
       max-width: 1035px; }
       .content .currency-stripe .currency div {
@@ -296,3 +315,9 @@
   100% {
     opacity: 1;
     transform: rotateY(0deg) translateY(0px); } }
+
+@keyframes shadow {
+  0% {
+    background-color: transparent; }
+  100% {
+    background-color: rgba(0, 0, 0, 0.5); } }
