--- a/website/sass/content.sass
+++ b/website/sass/content.sass
@@ -16,9 +16,21 @@
   .main-header
     position: relative
     z-index: 999
-    +wrap()
+    &.dark
+      background-color: #343434
+      position: fixed
+      z-index: 1000
+      width: 100%
+      .pop-up-container
+        display: block
+        animation:
+          name: shadow
+          duration: 300ms
+          timing-function: ease-in-out
+          fill-mode: forwards
 
     .main-nav
+      +wrap()
       display: flex
       justify-content: space-between
       align-items: center
@@ -55,18 +67,28 @@
           color: $main-blue
           font-weight: 600
 
+    .pop-up-container
+      position: fixed
+      width: 100%
+      height: 100%
+      display: none
+
   .currency-stripe
-    min-height: 56px
     background: white
     display: flex
     align-items: center
     position: relative
     z-index: 999
+    &.move-down
+      padding-top: 115px
+
 
     .currency
+      min-height: 56px
       margin: 0 auto
       display: flex
       justify-content: space-between
+      align-items: center
       width: 100%
       max-width: 1035px
       div
@@ -234,3 +256,9 @@
   100%
     opacity: 1
     transform: rotateY(0deg) translateY(0px)
+
+@keyframes shadow
+  0%
+    background-color: fade-out(black, 1)
+  100%
+    background-color: fade-out(black, 0.5)
