--- a/website/jade/sections/footer.jade
+++ b/website/jade/sections/footer.jade
@@ -1,11 +1,11 @@
 footer.sevenpay-footer
   .wrap
-    a(href="#") Обмен
-    a(href="#") Тарифы
-    a(href="#") Конфиденциальность
-    a(href="#") О нас
-    a(href="#") FAQ
-    a(href="#") Контакты
+    a(href="#content") Обмен
+    a.popup(href="#tarify") Тарифы
+    a.popup(href="#confidentiality") Конфиденциальность
+    a(href="#about") О нас
+    a.popup(href="#faq") FAQ
+    a(href="#contact") Контакты
     a(href="#") Новости
     
     
