--- a/website/app/css/content.css
+++ b/website/app/css/content.css
@@ -22,32 +22,31 @@
 .content {
   width: 100%;
   min-height: 700px;
-  background: url("../img/11.jpg") no-repeat center/cover; }
-  .content #particles-js {
-    position: absolute;
-    height: 700px;
-    width: 100%; }
-    .content #particles-js canvas {
+  background: url("../img/11.jpg") no-repeat center/cover;
+  background-attachment: fixed; }
+  .content .main-header-fixed {
+    position: fixed !important;
+    display: none;
+    z-index: 1001 !important; }
+    .content .main-header-fixed .shadow {
+      display: none;
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0; }
-  .content .main-header {
-    position: relative;
-    z-index: 999; }
-    .content .main-header.dark {
-      background-color: #343434;
-      position: fixed;
-      z-index: 1000;
-      width: 100%; }
-      .content .main-header.dark .pop-up-container {
-        display: block;
-        animation-name: shadow;
-        animation-duration: 300ms;
-        animation-timing-function: ease-in-out;
-        animation-fill-mode: forwards; }
-    .content .main-header .main-nav {
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      background-color: #343434; }
+    .content .main-header-fixed .main-nav .seven-pay {
+      color: #bbf02c !important; }
+    .content .main-header-fixed .pop-up-container {
+      display: none;
+      background-color: rgba(0, 0, 0, 0.5); }
+  .content .main-header,
+  .content .main-header-fixed {
+    position: absolute;
+    z-index: 1000;
+    width: 100%; }
+    .content .main-header .main-nav,
+    .content .main-header-fixed .main-nav {
       width: 100%;
       max-width: 970px;
       height: auto;
@@ -58,48 +57,58 @@
       justify-content: space-between;
       align-items: center;
       height: 115px; }
-      .content .main-header .main-nav .seven-pay {
+      .content .main-header .main-nav .seven-pay,
+      .content .main-header-fixed .main-nav .seven-pay {
         margin-top: -24px;
         margin-left: 48px;
         font-size: 111px;
-        color: #bbf02c;
+        color: white;
         font-family: "MyriadProBold", sans-serif;
         font-weight: 700;
         font-style: italic;
         letter-spacing: -0.075em; }
-        .content .main-header .main-nav .seven-pay .pay {
+        .content .main-header .main-nav .seven-pay .pay,
+        .content .main-header-fixed .main-nav .seven-pay .pay {
           font-size: 78px;
           letter-spacing: initial;
           display: inline-block; }
-      .content .main-header .main-nav .nav-list {
+      .content .main-header .main-nav .nav-list,
+      .content .main-header-fixed .main-nav .nav-list {
         margin: 0;
         display: flex;
         justify-content: space-between;
         width: 570px; }
-        .content .main-header .main-nav .nav-list a {
+        .content .main-header .main-nav .nav-list a,
+        .content .main-header-fixed .main-nav .nav-list a {
           color: white;
           font-family: "MyriadProRegular", sans-serif;
           font-size: 30px;
           font-weight: 400; }
-          .content .main-header .main-nav .nav-list a:hover {
+          .content .main-header .main-nav .nav-list a:hover,
+          .content .main-header-fixed .main-nav .nav-list a:hover {
             color: #1c95e9; }
-        .content .main-header .main-nav .nav-list a:last-child {
+        .content .main-header .main-nav .nav-list a:last-child,
+        .content .main-header-fixed .main-nav .nav-list a:last-child {
           font-family: "MyriadProSemiBold", sans-serif;
           color: #1c95e9;
           font-weight: 600; }
-    .content .main-header .pop-up-container {
+    .content .main-header .pop-up-container,
+    .content .main-header-fixed .pop-up-container {
       position: fixed;
       width: 100%;
       height: 100%;
       display: none; }
   .content .currency-stripe {
-    background: white;
     display: flex;
     align-items: center;
     position: relative;
-    z-index: 999; }
-    .content .currency-stripe.move-down {
-      padding-top: 115px; }
+    z-index: 999;
+    padding-top: 115px; }
+    .content .currency-stripe .wrap {
+      width: 100%;
+      background-color: white; }
+      .content .currency-stripe .wrap .currency {
+        margin: 0 auto; }
     .content .currency-stripe .currency {
       min-height: 56px;
       margin: 0 auto;
@@ -156,7 +165,7 @@
               width: 100%;
               max-width: 140px;
               height: auto;
-              perspective: 1000; }
+              perspective: 1000px; }
               .content .fill-application form .switch-container .left-input div .switcher.open li:nth-child(1n+2),
               .content .fill-application form .switch-container .right-input div .switcher.open li:nth-child(1n+2) {
                 display: flex;
@@ -315,9 +324,3 @@
   100% {
     opacity: 1;
     transform: rotateY(0deg) translateY(0px); } }
-
-@keyframes shadow {
-  0% {
-    background-color: transparent; }
-  100% {
-    background-color: rgba(0, 0, 0, 0.5); } }
