--- a/website/sass/content.sass
+++ b/website/sass/content.sass
@@ -2,7 +2,8 @@
 
 .content
   +size(100%, null, null, 700px)
-  background: url('../img/11.jpg') no-repeat  center/cover
+  background: url('../img/11.jpg') no-repeat  center 0px
+  background-size: cover
   background-attachment: fixed
 
   .main-header-fixed
@@ -120,12 +121,14 @@
 
         .left-input,
         .right-input
+          position: relative
+          z-index: 1000
           .heading
             margin-left: 24px
             color: white
-            font-family: $open-sans
+            font-family: $roboto
             font-size: 36px
-            font-weight: 300
+            font-weight: 100 !important
           width: 100%
           max-width: 430px
           div
@@ -183,6 +186,7 @@
                 font-size: 40px
                 font-weight: 400
                 border-radius: 30px
+                box-shadow: 0px 2px 2px 1px fade-out(black, 0.7)
                 &:hover
                   background-color: $main-green
 
@@ -213,6 +217,7 @@
         .phone-number
           margin-bottom: 21px
           display: flex
+          position: relative
           .envelope,
           .phone
             display: flex
@@ -235,6 +240,38 @@
             font-weight: 300
             &:focus
               outline: none
+
+          .hint
+            display: none
+            position: absolute
+            right: -240px
+            top: 20px
+            span
+              display: flex
+              justify-content: center
+              align-items: center
+              position: relative
+              background-color: white
+              width: 222px
+              height: 31px
+              border-radius: 30px
+              color: #ff253a
+              font-family: $myriad-semibold
+              font-size: 16px
+              .triangle
+                display: block
+                position: absolute
+                background-color: transparent
+                top: 50%
+                margin-top: -5px
+                left: -9px
+                width: 0
+                height: 0
+                border-radius: 0
+                border-right: 10px solid white
+                border-top: 5px solid transparent
+                border-bottom: 5px solid transparent
+
 
         button[type="submit"]
           border: none
