--- a/website/sass/reserve.sass
+++ b/website/sass/reserve.sass
@@ -101,6 +101,7 @@
                     li:nth-child(1n+2)
                       display: flex
                       opacity: 0
+                      box-shadow: 0px 2px 2px 1px fade-out(black, 0.7)
                       @for $i from 1 through 4
                         &:nth-child(#{$i})
                           animation:
