--- a/website/sass/variables.sass
+++ b/website/sass/variables.sass
@@ -11,8 +11,8 @@ $main-blue   :  #1c95e9
 $myriad           : "MyriadProRegular", sans-serif
 $myriad-bold      : "MyriadProBold", sans-serif
 $myriad-semibold  : "MyriadProSemiBold", sans-serif
-
 $open-sans        : "Open Sans", sans-serif
+$roboto           : 'Roboto', sans-serif
 
 // Mixins
 
