Added news page

--- a/website/jade/sections/footer.jade
+++ b/website/jade/sections/footer.jade
@@ -6,7 +6,7 @@ footer.sevenpay-footer
     a(href="#about") О нас
     a.popup(href="#faq") FAQ
     a(href="#contact") Контакты
-    a(href="#") Новости
+    a.news(href="news.html") Новости
     
     
     
