--- a/website/sass/app.sass
+++ b/website/sass/app.sass
@@ -1,10 +1,20 @@
+// Styles for the Home Page
+
+body
+ -webkit-font-smoothing: antialiased
+ -moz-osx-font-smoothing: grayscale
+
 @import variables.sass
-@import content.sass
-@import contact.sass
-@import btc-chart.sass
-@import about.sass
-@import reserve.sass
-@import footer.sass
-@import pop-up.sass
+@import home/content.sass
+@import home/contact.sass
+@import home/btc-chart.sass
+@import home/about.sass
+@import home/reserve.sass
+@import home/footer.sass
+@import home/pop-up.sass
 @import spinner.sass
 @import loader.scss
+
+// Styles for the News
+
+@import news/news.sass
