--- a/website/sass/variables.sass
+++ b/website/sass/variables.sass
@@ -37,3 +37,342 @@ $roboto           : 'Roboto', sans-serif
   margin: 0px auto
   padding-left: 15px
   padding-right: 15px
+
+
+// Headers mixin
+
+@mixin header ()
+  position: absolute
+  z-index: 1000
+  width: 100%
+
+  .main-nav
+    +wrap()
+    display: flex
+    justify-content: space-between
+    align-items: center
+    height: 115px
+
+    .seven-pay
+      margin-top: -24px
+      font-size: 111px
+      color: white
+      font-family: $myriad-bold
+      font-weight: 700
+      font-style: italic
+      letter-spacing: -0.075em
+      .pay
+        font-size: 78px
+        letter-spacing: initial
+        display: inline-block
+
+    .nav-list
+      margin: 0
+      display: flex
+      justify-content: space-between
+      width: 570px
+      a
+        color: white
+        font-family: $myriad
+        font-size: 30px
+        font-weight: 400
+        &:hover
+          color: $main-blue
+      a:last-child
+        font-family: $myriad-semibold
+        color: $main-blue
+        font-weight: 600
+
+// Main header Fixed mixin
+
+@mixin headerFixed ()
+  .pop-up-container
+    position: fixed
+    width: 100%
+    height: 100%
+    display: none
+    #entrance
+      display: none
+      position: absolute
+      left: 50%
+      transform: translate(-50%, 0%)
+      width: 100%
+      max-width: 940px
+      height: 500px
+      background-color: white
+
+
+      h1
+        position: relative
+        color: $main-blue
+        font-family: $myriad
+        font-size: 30px
+        background-color: #f1f1f1
+        margin: 0
+        text-align: center
+        padding-top: 11px
+        padding-bottom: 11px
+        font-weight: 400
+        .close
+          cursor: pointer
+          position: absolute
+          top: 17px
+          right: 57px
+          width: 20px
+          height: 20px
+          transition: transform 50ms ease-in-out
+          &:hover
+            transform: scale(1.2)
+            transition: transform 50ms ease-in-out
+
+      form
+        .container
+          position: absolute
+          top: 50%
+          left: 50%
+          transform: translate(-50%, -50%)
+          width: 100%
+          max-width: 620px
+          min-height: 180px
+
+          .email,
+          .password
+            display: flex
+            span:first-child
+              margin-bottom: 15px
+            span
+              display: flex
+              align-items: center
+              justify-content: center
+              height: 50px
+              width: 100%
+              max-width: 220px
+              color: white
+              background-color: #bbbbbb
+              border-radius: 30px 0 0 30px
+              font:
+                family: $open-sans
+                size: 30px
+                weight: 300
+
+            input
+              border: 0
+              border-radius: 0 30px 30px 0
+              background-color: #f1f1f1
+              width: 100%
+              max-width: 400px
+              height: 50px
+              color: #767676
+              text-align: center
+              font:
+                family: $open-sans
+                weight: 300
+                size: 30px
+              &:focus
+                outline: none
+
+          .sign-in
+            +clearfix()
+            .signin-btn,
+            .reg-btn
+              cursor: pointer
+              height: 50px
+              color: white
+              font-family: $myriad-semibold
+              font-size: 30px
+              font-weight: 600
+              border: 0
+              border-radius: 30px
+              &:focus
+                outline: none
+            .signin-btn
+              background-color: $main-green
+              width: 100%
+              max-width: 220px
+            .reg-btn
+              background-color: $main-blue
+              width: 100%
+              max-width: 380px
+              float: right
+
+
+
+
+    #faq
+      display: none
+      overflow: scroll
+      overflow-x: hidden
+      position: absolute
+      left: 50%
+      transform: translate(-50%, 0%)
+      width: 100%
+      max-width: 940px
+      min-height: 500px
+      background-color: white
+      transform-origin: 0% 0%
+      h1
+        position: relative
+        color: $main-blue
+        font-family: $myriad
+        font-size: 30px
+        background-color: #f1f1f1
+        margin: 0
+        text-align: center
+        padding-top: 11px
+        padding-bottom: 11px
+        font-weight: 400
+        .close
+          cursor: pointer
+          position: absolute
+          top: 17px
+          right: 40px
+          width: 20px
+          height: 20px
+          transition: transform 50ms ease-in-out
+          &:hover
+            transform: scale(1.2)
+            transition: transform 50ms ease-in-out
+      .info
+        height: 100px
+        padding: 20px
+        color: #767676
+        font-size: 18px
+        font-family: $myriad
+        font-weight: 400
+        span
+          font-weight: 600
+
+
+    #tarify
+      display: none
+      overflow: scroll
+      overflow-x: hidden
+      position: absolute
+      left: 50%
+      transform: translate(-50%, 0%)
+      width: 100%
+      max-width: 940px
+      min-height: 500px
+      background-color: white
+      transform-origin: 0% 0%
+      h1
+        position: relative
+        color: $main-blue
+        font-family: $myriad
+        font-size: 30px
+        background-color: #f1f1f1
+        margin: 0
+        text-align: center
+        padding-top: 11px
+        padding-bottom: 11px
+        font-weight: 400
+        .close
+          cursor: pointer
+          position: absolute
+          top: 17px
+          right: 40px
+          width: 20px
+          height: 20px
+          transition: transform 50ms ease-in-out
+          &:hover
+            transform: scale(1.2)
+            transition: transform 50ms ease-in-out
+      .info
+        h5
+          margin: 0 0 25px 0
+          font-family: $myriad
+          font-size: 24px
+          font-weight: 600
+          text-align: center
+        height: 100px
+        padding: 20px
+        color: #767676
+        font-size: 18px
+        font-family: $myriad
+        font-weight: 400
+        span
+          font-weight: 600
+
+    #confidentiality
+      display: none
+      overflow: scroll
+      overflow-x: hidden
+      position: absolute
+      left: 50%
+      transform: translate(-50%, 0%)
+      width: 100%
+      max-width: 940px
+      min-height: 500px
+      background-color: white
+      transform-origin: 0% 0%
+      h1
+        position: relative
+        color: $main-blue
+        font-family: $myriad
+        font-size: 30px
+        background-color: #f1f1f1
+        margin: 0
+        text-align: center
+        padding-top: 11px
+        padding-bottom: 11px
+        font-weight: 400
+        text-transform: uppercase
+        .close
+          cursor: pointer
+          position: absolute
+          top: 17px
+          right: 40px
+          width: 20px
+          height: 20px
+          transition: transform 50ms ease-in-out
+          &:hover
+            transform: scale(1.2)
+            transition: transform 50ms ease-in-out
+      .info
+        h5
+          margin: 0 0 25px 0
+          font-family: $myriad
+          font-size: 24px
+          font-weight: 600
+          text-align: center
+        height: 100px
+        padding: 20px
+        color: #767676
+        font-size: 18px
+        font-family: $myriad
+        font-weight: 400
+        span
+          font-weight: 600
+
+    article.one
+      margin: 0 auto
+      display: none
+      width: 100%
+      max-width: 970px
+      background-color: white
+      .wrap
+        overflow-y: scroll
+        overflow-x: hidden
+        height: 500px
+        padding: 15px
+        h1
+          margin: 0
+          color: #1c95e9
+          font-family: $myriad
+          font-size: 48px
+          font-weight: 400
+        .article-was-added
+          display: block
+          color: #767676
+          font-family: $myriad
+          font-size: 24px
+          font-weight: 300
+          padding-bottom: 15px
+
+        img
+          width: 100%
+
+        summary
+          color: #767676
+          font-family: $myriad
+          font-size: 24px
